--- a/app/code/Conversionbug/HelloMagento/view/frontend/templates/sayhello.phtml
+++ b/app/code/Conversionbug/HelloMagento/view/frontend/templates/sayhello.phtml
@@ -1,7 +1,17 @@
 <?php
-
 /**
  * @var \Mageplaza\HelloWorld\Block\Display $block
  */
 
 echo $block->sayHello();
+// echo $block->helper();
+ echo "<br/>";
+// echo $block->sayHello1();
+
+
+ echo $block->getUrl(); 
+ echo "<br/>";
+ echo $block->getBaseUrl();
+ echo $block->getMediaUrl();
+ ?>
+    
