--- a/app/code/Conversionbug/HelloMagento/view/frontend/templates/sayhello.phtml
+++ b/app/code/Conversionbug/HelloMagento/view/frontend/templates/sayhello.phtml
@@ -11,6 +11,6 @@ echo $block->sayHello();
  echo $block->getUrl(); //to print the current path                   
  $url =  $block->getUrl('hellomagento/Index/Test', ['name' => 'Annie']);
  echo '<br/>';
- echo "<a href='$url'>view</a>";
+ echo "<a href='$url' class='test'>view</a>";
  ?>
     
