--- a/app/code/Conversionbug/HelloMagento/view/frontend/layout/cms_index_index.xml
+++ b/app/code/Conversionbug/HelloMagento/view/frontend/layout/cms_index_index.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0"?> 
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="1column" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
+<!-- <head>
+       <css src="Conversionbug_HelloMagento::css/mycss.css"/>
+       <link src="Conversionbug_HelloMagento::js/myjs.js"/>
+</head> -->
 <referenceContainer name="content">
         <block class="Conversionbug\HelloMagento\Block\Display" name="block.banner" as="block.custom.cms" template="Conversionbug_HelloMagento::sayhello.phtml" after="-" />
 </referenceContainer>
