--- a/app/design/frontend/Conversionists/beed/Magento_Theme/layout/default.xml
+++ b/app/design/frontend/Conversionists/beed/Magento_Theme/layout/default.xml
@@ -18,6 +18,11 @@
                     <argument name="block_id" xsi:type="string">custom_menu_after</argument>
                 </arguments>
             </block>
+            <block class="Magento\Cms\Block\Block" name="icons">
+                <arguments>
+                    <argument name="block_id" xsi:type="string">icons</argument>
+                </arguments>
+            </block>
         </referenceContainer>
         <move element="custom_menu_after" destination="header-wrapper" after="logo"/>
     <!-- Creating new container reference: Conversionbug END -->
