--- a/app/design/frontend/Conversionists/beed/web/css/source/_module.less
+++ b/app/design/frontend/Conversionists/beed/web/css/source/_module.less
@@ -5,12 +5,10 @@
         max-width:1280px;
         margin:0 auto;
         box-sizing: border-box;
-        
+        //font-family: Lato;
     }
 
     .page-header{
-    
-       
         height: 58px;
         background-color: #f47646;
         .header{
@@ -18,8 +16,7 @@
                 margin-top: 18px;
                 padding: 0;
             }
-        }
-        
+        }   
     }
     .logo {
         padding-left: 51px;
@@ -33,8 +30,7 @@
     }
     
     .page-wrapper{    
-        .page-main{
-           
+        .page-main{  
         margin-left: 0px;
         margin-right: 0px;
         padding-left: 0px;
@@ -77,6 +73,17 @@
                         }
                         > a{
                             color:white;
+                            text-decoration: none;
+                            &:hover{
+                                &::after{
+                                    content: ""; 
+                                    display: block;
+                                    //margin: 0 auto; 
+                                    width: 50%;
+                                    padding-top: 15px;
+                                    border-bottom: 4px solid white; 
+                                }
+                            }
                         }
                         
                     }
@@ -90,9 +97,9 @@
                 float:right;
                 margin-right: 40px !important;
                 img{
-                    width:8px;
+                    width:11px;
                     height:13px;
-                    padding: 5px;
+                    padding: 4px;
                 }
             }
 
@@ -108,107 +115,124 @@
                         }
                     }
                 }
-                .footcontainer{
-                   
-                   position: relative;
-                   margin-top: 13%;
-                    .player-image{
-                        
-                        //height: 284px;
-                        background-size: cover;
-                       bottom:56%;
-                       //left:2%;
-                        margin: 0 auto;
-                       position: absolute;
-                       img{
-                         //height: 284px; background-size: cover;
-                       }
-                    }
-
-                    .footer-image{
-                        height: 410px;
-                        img{
-                            width: 1518px;
-                            height: 442px;
-                            background-size: cover;
-                            position: relative;
-                            z-index: -1;
-                        }
-                        
-                    }
-                    .foot-value{
-                        position: absolute;
-                        //height: 248px;
-                        width: 1106px;
-                        top: 40%;
-                        left: 3%;
-                        .items{
-                            width: 22%;
-                            //height:229px;
-                            margin-right: 0px;
-                            padding-left: 2%;
-                            display: inline-block;
-                            vertical-align:top;
-                            .fab{
-                                img{
-                                    padding-top: 9%;
-                                }
-                            }
-                            form{
-                                //width:291px;
-                            }
-                            input{
-                                width: 192px;
-                                // height: 34px;
-                                background-color: #050506;
-                            }
-                            button{
-                                //width: 34px;
-                                //height: 34px;
-                                background-color: #f47646;
-                                vertical-align: top;
-                            }
-                            p{
-                                color:white;
-                            }
-                            ul{
-                                padding-left: 0px;
-                            }
-                            li{
-                                > a{
-                                    color:white;
-                                }
-                            } 
-                            h6{
-                                color:white;
-                                font-size:22px;
-                                margin-bottom: 10px;
-                            }
-                        }
-                    }
-                }
+                
                 .page-footer {
                     width:1279px;
-                    background-color: black;
+                   // background-color: black;
                     color: white;
                     font-size: 20px;
+                    position: relative;
+                    height:auto;
+                    padding-top:110px;
+                    .footcontainer{
+                   
+                        position: absolute;
+                        margin-top: 0%;
+                         .player-image{
+                             
+                             //height: 284px;
+                             background-size: cover;
+                            bottom:50%;
+                            //left:2%;
+                             margin: 0 auto;
+                            position: absolute;
+                            img{
+                              //height: 284px; background-size: cover;
+                            }
+                         }
+     
+                         .footer-image{
+                            // height: 410px;
+                             img{
+                                 width: 1518px;
+                                 //height: 442px;
+                                 background-size: cover;
+                                 position: relative;
+                                 z-index: -1;
+                             }
+                             
+                         }
+                         .foot-value{
+                             position: absolute;
+                             //height: 248px;
+                             width: 1106px;
+                             top: 35%;
+                             left: 3%;
+                             .items{
+                                 width: 22%;
+                                 //height:229px;
+                                 margin-right: 0px;
+                                 padding-left: 2%;
+                                 display: inline-block;
+                                 vertical-align:top;
+                                 .fab{
+                                     img{
+                                         padding-top: 9%;
+                                     }
+                                 }
+                                 form{
+                                     //width:291px;
+                                 }
+                                 input{
+                                     width: 192px;
+                                     // height: 34px;
+                                     background-color: #050506;
+                                 }
+                                 button{
+                                     //width: 34px;
+                                     //height: 34px;
+                                     background-color: #f47646;
+                                     vertical-align: top;
+                                 }
+                                 p{
+                                     color:white;
+                                     font-size:14px;
+                                 }
+                                 ul{
+                                     padding-left: 0px;
+                                 }
+                                 li{
+                                     > a{
+                                         color:white;
+                                         font-size:14px;
+                                        
+                                     }
+                                 } 
+                                 h6{
+                                     color:white;
+                                     font-size:16px;
+                                     margin-bottom: 10px;
+                                 }
+                             }
+                         }
+                     }
+                     .copyright{
+                        //opacity:0.7;
+                        width:1259px;
+                        height: 50px;
+                        bottom: 0%;
+                        background-color: black;
+                        position: absolute;
+                        span{
+                            font-size:15px;
+                            margin-left: 20px;
+                        }
+                    }
                 }
                 
                 
-                .copyright{
-                    opacity:0.7;
-                    width:358px;
-                }
+                
     
         }
         .footer {
             &.content {
-                max-width: 0 !important;
+                height: 412px;
+                //max-width: 0 !important;
                 border-top: 0 !important;
                 margin-top: 0 !important;
                 margin-left: 0 !important;
                 margin-right: 0 !important;
-                padding-bottom: 25px !important;
+               // padding-bottom: 25px !important;
                 padding-top: 0 !important;
         
         
@@ -291,7 +315,7 @@
                         }
                         h1{
                             position: absolute;
-                            top: 45%;
+                            top: 35%;
                             left: 33%;
                             color: white;
                             font-size: 28px;
@@ -313,8 +337,8 @@
                             height: 56px;
                             font-size: 18px;
                             color: white;
-                            left: 28%;
-                            top: 64%;
+                            left: 26%;
+                            top: 56%;
                             
                         }
                         button{
@@ -322,7 +346,7 @@
                             height: 51px;
                             background-color: #f47646;
                             position: absolute;
-                            top: 80%;
+                            top: 73%;
                             left: 44%;
                             border-radius: 0px;
                             color: white;
@@ -382,6 +406,9 @@
                                 .process-steps{
                                     //height:188px;
                                     display:flex;
+                                    .down{
+                                        padding-top: 4%;
+                                    }
                                     
                                     .service{
                                         display:flex;
@@ -416,6 +443,10 @@
                         }
                         .process-keys-about{
                             width:165px;
+                            h6{
+                                color: #f47646;
+                                //font-size:1.5rem;
+                            }
                         }
                     }
             
@@ -471,11 +502,11 @@
                     }
                 }
                 .Block-Bg{
-                    height: 133px;
+                height: 152px;
                 background-color: #ffffff;
                 border: solid 1px rgba(1, 2, 2, 0.1);
-               width:1154px;
-                margin-left: 57px;
+                width:1100px;
+                margin-left: 89px;
                 margin-top: 92px;
                 margin-bottom: 90px;
                     .team{
@@ -555,25 +586,41 @@
             font-size:24px;
             margin-top:0%;  
         }
-        .footcontainer{
-            .player-image{
-                bottom: 63%;
-            }
-            .foot-value{
-                width:689px;
-                left:5%;
-                .items{
-                    width:21%;
-                    input{
-                        width:101px;
+
+        .page-footer{
+            width:768px;
+            font-size:14px;
+            margin-top:7%;
+            .footcontainer{
+                .player-image{
+                    bottom: 63%;
+                }
+                .foot-value{
+                    width:689px;
+                    left:2%;
+                    top:20%;
+                    .items{
+                        width:21%;
+                        input{
+                            width:101px;
+                        }
                     }
                 }
             }
-        }
-        .page-footer{
-            width:768px;
-        }
+            .copyright{
+                width:746px;
+            }
+        }   
     }
+
+        .footer{
+            &.content{
+                height: 283px;
+            }
+        }
+
+
+
         .columns{
             .hero-body{
                 .beebanners{
@@ -619,8 +666,8 @@
                     }
                 }
                 .flexibility{
-                    padding-top: 0px;
-                    height:344px;
+                    padding-top: 9px;
+                    height:324px;
                     h1{
                         top:7%;
                         left:16%;
@@ -747,53 +794,68 @@
         }
         .page-footer{
             width:360px;
+            padding-top: 47px;
+            .footcontainer{
+                .player-image{
+                    bottom:57%;
+                }
+                .footer-image{
+                    height:157px;
+                    img{
+                        height: 181px;;
+                    }
+                }
+                .foot-value{
+                    width:334px;
+                    left:0px;
+                    top:20%;
+                    .items{
+                        input{
+                            width:52px;
+                            font-size: 9px;
+                            height: 24px;
+                        }
+                        form{
+                            width:108px;
+                        }
+                        h6{
+                            font-size: 8px;
+                            line-height: 0;
+                        }
+                        p{
+                            font-size: 8px;
+                            //line-height: 0;
+                        }
+                        button{
+                            height: 23px;
+                            padding: 0px 5px;border-radius:0;
+                        }
+                        
+                       ul>li{
+                           line-height: 0;
+                           margin-bottom: 0;
+                                     a{
+                                font-size: 8px;
+                                line-height: 12px;
+                        }
+                       }
+                    }
+                }
+            }
+            .copyright{
+                width:360px;
+                span{
+                    font-size: 11px;
+                    margin-left: 4px;
+                }
+            }
         }
-        .footcontainer{
-            .player-image{
-                bottom:57%;
-            }
-            .footer-image{
-                height:157px;
-                img{
-                    height: 181px;;
-                }
-            }
-            .foot-value{
-                width:334px;
-                left:0px;
-                top:20%;
-                .items{
-                    input{
-                        width:52px;
-                        font-size: 9px;
-    height: 24px;
-                    }
-                    form{
-                        width:108px;
-                    }
-                    h6{
-                        font-size: 11px;
-                        line-height: 0;
-                    }
-                    p{
-                        font-size: 9px;
-                        //line-height: 0;
-                    }
-                    button{
-                        height: 23px;
-                        padding: 0px 5px;border-radius:0;
-                    }
-                    
-                   ul>li{
-                       line-height: 0;
-                       margin-bottom: 0;
-                                 a{
-                            font-size: 1rem;
-                            line-height: 15px;
-                    }
-                   }
-                }
-            }
+        
+    }
+
+    .footer{
+        &.content{
+            height: 187px;
         }
     }
         
@@ -914,9 +976,10 @@
                    padding-top: 0px;
                    .teams{
                        width:54px;
+                       height: 41px;
                        &.arrow,&.arrows{
                            width:51px;
-                           margin-bottom:12%;
+                           margin-bottom:3%;
                        }
                       
                    } 
